--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hls-server": "^1.5.0"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "pug": "^3.0.2"
   }
